[Fix] Landing Page navbar menu on mobile

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -26,27 +26,11 @@
     display: none;
 }
 
-@media (max-width: 768px) {
-    .logo .desktop {
-        display: none;
-    }
-
-    .logo .mobile {
-        display: block;
-    }
-}
-
 .navbar {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
-@media screen and (max-width: 768px) {
-    .navbar {
-        display: none;
-    }
 }
 
 .navbarItem {
@@ -64,12 +48,6 @@
     display: flex;
     align-items: center;
     margin-right: 1rem;
-}
-
-@media screen and (max-width: 768px) {
-    .navBtn {
-        display: none;
-    }
 }
 
 .navBtnLink {
@@ -113,7 +91,27 @@
     color: #000;
 }
 
+.menu {
+    display: none;
+}
+
 @media screen and (max-width: 768px) {
+    .logo .desktop {
+        display: none;
+    }
+
+    .logo .mobile {
+        display: block;
+    }
+
+    .navBtn {
+        display: none;
+    }
+
+    .navbar {
+        display: none;
+    }
+
     .burger {
         display: block;
         position: absolute;
@@ -122,5 +120,122 @@
         transform: translate(-30%, 70%);
         font-size: 1.4rem;
         cursor: pointer;
+    }
+
+    .menu {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border-radius: 3px;
+        max-height: 396px;
+        background: #fff;
+        box-shadow: 0px 2px 6px 0px rgba(193, 199, 208, 0.4);
+        position: sticky;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: auto;
+        transform: translate(0, 21%);
+        z-index: 99;
+        transition: all 0.3s ease-in-out;
+    }
+
+    .menu_bg {
+        width: 100%;
+        height: 100%;
+        background: transparent;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    .menu_container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        margin: 0 auto;
+        width: 90%;
+        height: 100%;
+    }
+
+    .menu_body {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        width: 100%;
+        padding: .7em 0;
+    }
+
+    .menu_body_text {
+        font-size: 1rem;
+        padding: .7em 0;
+        margin: 0;
+    }
+
+    .menu_item {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        width: 100%;
+        padding: .7em 0;
+        margin: 0;
+    }
+
+    .menu_item>p {
+        font-size: 1rem;
+        font-weight: bold;
+        padding: .4em 0;
+        margin: 0;
+    }
+
+    .menu_item:hover {
+        background: #f5f5f5;
+    }
+
+    .menu_footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        width: 100%;
+        padding: .7em 0;
+    }
+
+    .menu_link {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        background-color: #0052CC;
+        border-radius: 4px;
+        padding: .8em 0;
+        margin: .7em 0;
+        text-decoration: none;
+        cursor: pointer;
+        transition: all 0.2s ease-in-out;
+    }
+
+    .menu_link:focus {
+        background-color: #3b76ce;
+        transform: translate(0, -1px);
+    }
+
+    .menu_link:last-of-type {
+        background-color: #F4F5F7;
+        cursor: not-allowed;
+        pointer-events: none;
+        color: #A5ADBA;
+    }
+
+    .menu_link * {
+        font-size: 1rem;
+        color: #ffffff;
+        font-weight: bold;
+        margin: 0;
     }
 }
